# comp_graphics

./: .gitignore  README.md  README_3.md  README_4.md  README_5.md  README_6.md  README_ALL.md
lab1/: Button.cs  Line.cs  Program.cs  README.md  Shader.cs  Window.cs  lab1.sln  line_transoformation.cs
lab1/shaders/: shader.frag  shader.vert
lab2/: Cylinder.cs  Program.cs  README.md  Shader.cs  Window.cs  lab2.csproj
lab3/: CMakeLists.txt  Polyline.cs  README.md  Shader.cs  main.cpp
lab4/: CMakeLists.txt  README.md  README_4.md  creepy.cpp  main.cpp  not_main.cpp  stable.cpp
lab5/: CMakeLists.txt  README.md  main.cpp
lab6/: CMakeLists.txt  README.md  README_6.md  main.cpp
lab6/include/: camera.h  hud.h  lighting.h  objects.h  render.h
lab6/src/: camera.cpp  hud.cpp  lighting.cpp  main.cpp  objects.cpp  render.cpp
test_repo/: README.md
